[metadata]
name = unsupported-python
version = 0.0.0
maintainer = Nicolas Tessore
maintainer_email = n.tessore@ucl.ac.uk
description = Conditional dependency to indicate unsupported Python versions
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files =
    LICENSE.txt
url = https://github.com/ntessore/unsupported-python

[options]
packages =
